Fix footer copyright disappearing on small screens and made more readable

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -369,7 +369,8 @@ input[type=submit]:hover {
 
 @media screen and (max-width: 600px) {
 
-  .sign-up-container h2, p {
+  .sign-up-container h2,
+  p {
     margin: auto 10px;
     text-align: center;
     padding: 15px;
@@ -406,13 +407,17 @@ footer {
   width: 100%;
   position: fixed;
   bottom: 0;
+  text-align: center;
 }
 
 footer p {
-  text-align: right;
-  float: right;
-  clear: both;
+  position: absolute;
   font-size: 20%;
+  bottom: 0;
+  color: #fff;
+  margin: auto;
+  padding: 5px;
+  width: 100%;
 }
 
 .footer-links {
